fix: 修改包名以提交npm registry

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dat.gui",
+  "name": "@taodev/dat.gui",
   "version": "0.7.9",
   "description": "A lightweight graphical user interface for changing variables in JavaScript.",
   "main": "build/dat.gui.js",
@@ -19,14 +19,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://github.com/taodev/dat.gui.git"
+    "url": "https://github.com/taodev/dat.gui.git"
   },
   "author": "Data Arts Team, Google",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/dataarts/dat.gui/issues"
+    "url": "https://github.com/taodev/dat.gui/issues"
   },
-  "homepage": "https://github.com/dataarts/dat.gui#readme",
+  "homepage": "https://github.com/taodev/dat.gui#readme",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-plugin-external-helpers": "^6.22.0",
